--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -17,6 +18,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "postcss-import": "^15.0.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
