--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.4",
+    "@types/pdfmake": "^0.2.2",
+    "pdfmake": "^0.2.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1"
@@ -16,6 +18,7 @@
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-pdf": "^6.2.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
