--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@types/pdfmake": "^0.2.2",
+    "jspdf": "^2.5.1",
     "pdfmake": "^0.2.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.0",
     "@types/react-pdf": "^6.2.0",
