--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.1",
     "react-to-pdf": "^0.0.14"
   },
   "devDependencies": {
