--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "@headlessui/react": "^1.7.4",
     "@types/pdfmake": "^0.2.2",
     "html2canvas": "^1.4.1",
-    "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
-    "pdfmake": "^0.2.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.1",
-    "react-to-pdf": "^0.0.14"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/jspdf": "^2.0.0",
