--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/jspdf": "^2.0.0",
