--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
