--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.4",
+    "@microsoft/teams-js": "^2.10.1",
     "@types/pdfmake": "^0.2.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
@@ -29,6 +30,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.13",
+    "copy-webpack-plugin": "^11.0.0",
     "postcss": "^8.4.19",
     "postcss-import": "^15.0.0",
     "tailwindcss": "^3.2.4",
