--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -1,9 +1,9 @@
 name: Build and Test
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ "master" ]
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
