--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3",
     "vite": "^2.9.7"
-  }
+  },
+  "description": "O Bela Tagarela é um sistema multiplataforma de Comunicação Aumentativa e Alternativa desenvolvido para tornar a comunicação mais acessível para pessoas com dificuldades comunicativas.",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
